// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`On render, check that moves is displayed correctly 1`] = `
<div>
  <p>
    <span
      class="font-bold underline text-lg"
    >
      Moves
    </span>
     :
  </p>
  <div
    class="pl-4 mb-6"
    data-testid="moves-container"
  >
    <p>
      razor-wind
    </p>
  </div>
</div>
`;

exports[`On render, check that types is displayed correctly 1`] = `
<div>
  <p>
    <span
      class="font-bold underline text-lg"
    >
      Types
    </span>
     :
  </p>
  <div
    class="pl-4 mb-6"
    data-testid="types-container"
  >
    <p>
      grass
    </p>
    <p>
      poison
    </p>
  </div>
</div>
`;
